manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: trueberryless-org
    namespace: trueberryless-org
    annotations:
        cert-manager.io/issuer: acme-issuer
spec:
    selector:
        app: trueberryless-org
    ports:
        - name: http
          port: 80
          targetPort: 3000
